webclient/style.css
/* override photon user-select: none */
* { 
    user-select: auto;
    -webkit-user-select: auto;
}
body {
    padding: 0;
    margin: 0;
    font-family: system,-apple-system,".SFNSDisplay-Regular","Helvetica Neue",Helvetica,"Segoe UI",sans-serif;
    font-size: 13px;
    line-height: 1.6;
    color: #333;
    background-color: transparent;
}
body, html {
    height: 100%;
}
h3 {
    font-size: 24px;
}
h1, h2, h3, h4, h5, h6 {
    margin-top: 20px;
    margin-bottom: 10px;
    font-weight: 500;
    overflow: hidden;
}
.list-group *, .nav-group-item, h1, h2, h3, h4, h5, h6, label, td, th {
    white-space: nowrap;
    text-overflow: ellipsis;
}

button,
input,
optgroup,
select,
textarea {
  color: inherit;
  font: inherit;
  margin: 0;
}
.window {
    position: absolute;
    bottom: 0;
    display: flex;
    flex-direction: column;
    background-color: #ddd;
}
.window-content {
    position: relative;
    overflow-y: auto;
    display: flex;
    flex: 1;
}



.window-arena{
    background-color: #f5f5f4;
}
.pane-group {
    position: absolute;
    bottom: 0;
    display: flex;
}
.pane-group, .window {
    top: 0;
    left: 0;
    right: 0;
}

.pane:first-child {
    border-left: 0;
}
.pane-sm {
    max-width: 220px;
    min-width: 150px;
}
.pane {
    overflow-y: auto;
    flex: 1;
    border-left: 1px solid #ddd;
}
.sidebar {
    background-color: #f5f5f4;
}


.nav-group {
    font-size: 14px;
}
.nav-group-title {
    margin: 0;
    padding: 10px 10px 2px;
    font-size: 12px;
    font-weight: 500;
    color: #666;
}
.nav-group-item {
    padding: 2px 10px 2px 25px;
    display: block;
    color: #333;
    text-decoration: none;
}

.nav-group-item .table-icon {
    width: 19px;
    height: 18px;
    float: left;
    color: #737475;
    margin-top: 2px;
    margin-right: 7px;
    font-size: 18px;
    text-align: center;
}


#banner{
    height: 100px;
    display: flex;
}


.row-value {
    padding: 0 5px;
    border: 1px solid #ccc;
    height: 30px;
}

.card-view{
    display: flex;
    flex-wrap: wrap;
}

.card-field {
    display: flex;
    padding: 10px 20px;
}

.card-view-value{
    padding: 0 5px;
    height: 30px;
    flex: 1;
}
.card-field-value input {
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #ccc;
}

.card-field-value textarea {
    border-width: 1px 1px 1px 1px;
    border-style: solid;
    border-color: #ccc;
}

.card-field-name{
    padding: 0 5px;
    height: 30px;
    flex: 1;
    text-align: right;
}

.card-field-label {
    padding-right: 20px;
}


.tab-row-wrapper{
    display: block;
}


.tab-row{
    display: inline-flex;
}

.tab-row-value {
    border-right: 1px solid #ccc;
}

.tab-row-value a{
    line-height: 30px;
}

.tab-row-value input
 {
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #ccc;
    height: 30px;
}

input.uuid-textbox{
    font-family: monospace;
}

a.primary-link {
    font-family: monospace;
    white-space: nowrap;
}

.tab-row-value  select
 {
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #ccc;
    height: 30px;
    background-color: transparent;
}

.widget-value{
    padding: 0 5px;
    text-align: center;
}

.widget-value.is-modified,
.widget-value.is-modified textarea,
.widget-value.is-modified input{
    background-color: #fff6e2;
}


.frozen-head{
    min-width: 120px;
    border-bottom: 1px solid #ccc;
    border-right: 1px dashed #ccc;
}


.frozen-head .frozen-head-indicator {
    padding: 10px 5px;
    display: flex;
    justify-content: center;
}
.frozen-head-indicator .sort-order-reset{
   padding: 0 5px; 
}
.frozen-head .frozen-head-controls {
    display: flex;
    padding-left: 20px;
}

.frozen-head .frozen-head-controls .filter-btn{
    padding: 0 20px;
}

.page-shadow{
    min-width: 120px;
    overflow: hidden;
    background-color: #f5f5f4;
    border-right: 1px dashed #ccc;
}
.page-shadow-content{
    position: relative;
}
.row-shadow-content {
    padding: 0 10px;
    height: 30px;
}
.shadow-page {
}

/* Frozen head columns */
.frozen-head-columns{
    display: flex;
    background-color: #f5f5f4;
}

/* row shadow and the listing of row records */
.page-shadow-and-list-rows{
    display: flex;
}

.row-controls {
    display: flex;
    height: 40px;
    font-size: 14px;
    padding-left: 10px;
}

.row-controls .duplicate-record {
    color: #333;
    font-weight: 900;
}

.row-controls  a {
    color: #333;
    outline: none;
    padding: 0 1px;
}
.row-controls > div {
    padding: 0 1px;
}

.row-controls .row-focus-indicator {

}

.row-controls .row-undo,
.row-controls .row-save {
    color: #ccc;
}

.row-controls .row-undo.is-active,
.row-controls .row-save.is-active {
    color: #333;
}

.tab-names{
    background-color: #ddd;
    display: flex;
    padding-left: 15px;
    border-bottom: 1px solid #aaa;
}

.tab-names a.tab-name {
    padding-top: 5px;
    text-decoration: none;
    display: block;
    color: #333;
    margin-bottom: -1px;
    height: 30px;
}

.tab-name {
    border: 1px solid #ccc;
    padding: 5px 20px;
    height: 40px;
    border-radius: 5px 5px 0 0;
    outline: 0;
}

.tab-columns {
    overflow: hidden;
    border-bottom: 1px solid #ccc;
}
.tab-columns-content {
    display: inline-flex;
    position: relative;
}

.tab-column-with-sort{
    display: flex;
    justify-content: center;
    padding: 10px 0;
}

.tab-column {
    display: flex;
    font-size: 14px;
}

.tab-column .column-name {
    padding: 0 10px;
}

.tab-column .sort-order-badge {
    font-size: 8px;
    vertical-align: middle;
    margin: 2px 4px;
    padding: 1px 1px;
    border-radius: 8px;
    background-color: #dde;
    min-width: 16px;
    height: 16px;
    text-align: center;
}

.tab-column .sort-btn{
}
.tab-column .column-sort{
    display: flex;
    width: 10px;
}

.column-sort .sort-btn{
    color: #888;
}


.tab-column-with-filter {
    border-right: 1px solid #ccc;
    height: 70px;
}
/* ... */

